tests/snapshots/parser__parser@bin_ops.input.snap
---
source: tests/parser.rs
assertion_line: 36
expression: asts
input_file: tests/inputs/parser/bin_ops.input

---
- - Ok:
      - Expr:
          BinOp:
            sym: Minus
            lhs:
              Num:
                value: 20
            rhs:
              Num:
                value: 19
  - (- 20 19)
- - Err:
      message: "Unknown binary operator: !"
      line: 0
      column: 0
  - "Parsing error: Unknown binary operator: !"

