tests/snapshots/parser__parser@expr.input.snap
---
source: tests/parser.rs
assertion_line: 36
expression: asts
input_file: tests/inputs/parser/expr.input

---
- - Ok:
      - Expr:
          BinOp:
            sym: Plus
            lhs:
              BinOp:
                sym: Plus
                lhs:
                  Num:
                    value: 19
                rhs:
                  Var:
                    name: a
            rhs:
              Num:
                value: 40
  - (+ (+ 19 a) 40)
- - Err: Invalid expression
  - Invalid expression
- - Err: "Expecting primary expression. Got: Else"
  - "Expecting primary expression. Got: Else"

