tests/snapshots/parser__parser@for.input.snap
---
source: tests/parser.rs
assertion_line: 36
expression: asts
input_file: tests/inputs/parser/for.input

---
- - Ok:
      - Expr:
          For:
            var_name: x
            start:
              Num:
                value: 1
            cond:
              BinOp:
                sym: Lt
                lhs:
                  Var:
                    name: x
                rhs:
                  Num:
                    value: 10
            step:
              Num:
                value: 1
            body:
              - Var:
                  name: foo
  - (for (let x 1) (< x 10) 1 foo)
- - Err:
      message: "Expecting 'let' after for. Got EOF"
      line: 0
      column: 0
  - "Parsing error: Expecting 'let' after for. Got EOF"
- - Err:
      message: Expecting identifier after let. Got EOF
      line: 0
      column: 0
  - "Parsing error: Expecting identifier after let. Got EOF"
- - Err:
      message: "Expecting '=' after identifer. Got EOF"
      line: 0
      column: 0
  - "Parsing error: Expecting '=' after identifer. Got EOF"
- - Err:
      message: Invalid expression
      line: 0
      column: 0
  - "Parsing error: Invalid expression"
- - Err:
      message: "Expecting ';' after start. Got EOF"
      line: 0
      column: 0
  - "Parsing error: Expecting ';' after start. Got EOF"

