tests/snapshots/parser__parser@func_def.input.snap
---
source: tests/parser.rs
assertion_line: 36
expression: asts
input_file: tests/inputs/parser/func_def.input

---
- - Ok:
      - Func:
          proto:
            name: a
            args:
              - b
              - c
          body:
            - BinOp:
                sym: Plus
                lhs:
                  BinOp:
                    sym: Plus
                    lhs:
                      Num:
                        value: 19
                    rhs:
                      Var:
                        name: a
                rhs:
                  Num:
                    value: 40
  - (define (a b c) (+ (+ 19 a) 40))
- - Err: Expecting function name in prototype
  - Expecting function name in prototype
- - Err: "Expecting '(' in prototype"
  - "Expecting '(' in prototype"
- - Err: Expecting identifier in prototype
  - Expecting identifier in prototype
- - Err: Expecting identifier in prototype
  - Expecting identifier in prototype
- - Err: "Expecting ','. Got: Ident(\"b\")"
  - "Expecting ','. Got: Ident(\"b\")"
- - Err: "Expecting ')' in prototype"
  - "Expecting ')' in prototype"
- - Err: Expecting identifier in prototype
  - Expecting identifier in prototype
- - Err: "Expecting ',' or ')' in prototype"
  - "Expecting ',' or ')' in prototype"
- - Err: "Expecting ')' in prototype"
  - "Expecting ')' in prototype"

