tests/snapshots/parser__parser@func_def_multi_expr.input.snap
---
source: tests/parser.rs
assertion_line: 36
expression: asts
input_file: tests/inputs/parser/func_def_multi_expr.input

---
- - Ok:
      - Func:
          proto:
            name: a
            args:
              - b
              - c
          body:
            - BinOp:
                sym: Plus
                lhs:
                  BinOp:
                    sym: Plus
                    lhs:
                      Num:
                        value: 19
                    rhs:
                      Var:
                        name: a
                rhs:
                  Num:
                    value: 40
            - BinOp:
                sym: Plus
                lhs:
                  Var:
                    name: b
                rhs:
                  Var:
                    name: a
  - (define (a b c) (+ (+ 19 a) 40) (+ b a))

